Add generation instructions